example/secondfile/objects/DHStatus_Entity_Identifier__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Test Parameters-Entity Identifier</description>
    <fields>
        <fullName>DHStatus_Common_Test_Parameters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Test Parameters-Entity Identifier--&gt; DHStatus-Common Test Parameters</description>
        <label>DHStatus-Common Test Parameters</label>
        <referenceTo>DHStatus_Common_Test_Parameters__c</referenceTo>
        <relationshipLabel>DHStatus-Entity Identifier</relationshipLabel>
        <relationshipName>DHStatus_Entity_Identifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Test Parameters-Entity Identifier--Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Common Test Parameters-Entity Identifier--&gt;Value</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Entity Identifier</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>DHStatus-Entity Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Entity Identifier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>